--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:single": "mocha",
     "chainA": "yarn hardhat node --port 8545",
     "chainB": "yarn hardhat node --port 8546",
-    "start:server": "yarn ts-node src/serve/main.ts"
+    "start:server": "yarn ts-node src/serve/main.ts",
+    "build": "yarn hardhat compile"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
